# xkey

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check.yml  release.yml
tests/: __init__.py  test_noop.py  test_xkey_sysex_novation_codec.py
xkey/: __about__.py  __init__.py  __main__.py  cli.py  exception.py
xkey/sysex/: __init__.py  constant.py  parser.py
xkey/sysex/novation/: __init__.py  codec.py  constant.py  message.py
