[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xkey"
readme = "README.md"
description = "Novation SysEx utilities."
requires-python = ">=3.7"
dynamic = ["version"]
authors = [{name = "Peter Adkins", email = "peter@sunkenlab.com"}]
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
xkey = "xkey.cli:entrypoint"

[project.optional-dependencies]
tests = [
    "black",
    "coverage",
    "ruff",
    "types-setuptools",
    "isort",
    "mypy",
    "pip-tools",
    "mock",
    "pytest",
    "pytest-cov",
    "responses",
    "tox",
    "sphinx",
    "furo",
]

[tool.setuptools.dynamic]
version = {attr = "xkey.__about__.__version__"}

[tool.mypy]
files = [
    "./xkey/**/*.py",
    "./tests/**/*.py"
]
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = false
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.pytest.ini_options]
junit_family = "xunit2"
norecursedirs = ".*"
self-contained-html = true
testpaths = [
    "tests"
]
addopts = """
    --strict
    --tb=auto
    --cov=xkey
    --cov-report=term-missing:skip-covered
    --cov-branch
    -p no:doctest
    -p no:warnings
    -s
"""

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = linters,py3

    [testenv]
    pip_version = pip
    extras = tests
    commands = pytest -c pyproject.toml
    srcs = xkey

    [testenv:linters]
    basepython = python3
    usedevelop = true
    commands =
        {[testenv:ruff]commands}
        {[testenv:mypy]commands}

    [testenv:ruff]
    basepython = python3
    skip_install = true
    commands =
        ruff check {[testenv]srcs}

    [testenv:mypy]
    basepython3 = python3
    skip_install = true
    commands =
        - mypy --config-file pyproject.toml {[testenv]srcs}
"""
